--- a/lesson-19/index.html
+++ b/lesson-19/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.1">
+    <link rel="stylesheet" href="css/style.css?v=1.0.2">
     <title>Lesson 19</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
                             <span>
                             UPTO 50% OFF
                             </span>
-                            <a class="info__link" href="#" target="_blank">
+                            <a class="info__link info__link--yellow" href="#" target="_blank">
                                 Explore Items
                             </a>
                         </div>
@@ -53,31 +53,31 @@
                             <span>
                             UPTO 50% OFF
                             </span>
+                            <a class="info__link info__link--purple" href="#" target="_blank">
+                                Explore Items
+                            </a>
+                        </div>
+                    </div>
+                    <div class="content__item item">
+                        <img class="item__image item__image--right" src="img/example-2.jpg"
+                             alt="Breezy summer style picture">
+                        <div class="item__overlay"></div>
+                        <div class="item__info info info--right">
+                            <h3 class="info__subtitle info__subtitle--right">
+                                Be young Presents
+                            </h3>
+                            <h2 class="info__title">
+                                Breezy Summer
+                                Style
+                            </h2>
+                            <span>
+                                                UPTO 50% OFF
+                                                </span>
                             <a class="info__link" href="#" target="_blank">
                                 Explore Items
                             </a>
                         </div>
                     </div>
-<!--                    <div class="content__item item">-->
-<!--                        <img class="item__image item__image&#45;&#45;right" src="img/example-2.jpg"-->
-<!--                             alt="Breezy summer style picture">-->
-<!--                        <div class="item__overlay"></div>-->
-<!--                        <div class="item__info info info&#45;&#45;right">-->
-<!--                            <h3 class="info__subtitle info__subtitle&#45;&#45;right">-->
-<!--                                Be young Presents-->
-<!--                            </h3>-->
-<!--                            <h2 class="info__title">-->
-<!--                                Breezy Summer-->
-<!--                                Style-->
-<!--                            </h2>-->
-<!--                            <span>-->
-<!--                            UPTO 50% OFF-->
-<!--                            </span>-->
-<!--                            <a class="info__link" href="#" target="_blank">-->
-<!--                                Explore Items-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -124,22 +124,103 @@
                     </h2>
                 </div>
                 <div class="saving__content content">
-                    <div class="content__item item">
-                        <img class="item__image" src="img/content/saving-01.webp" alt="Product picture">
+                    <div class="content__sav-item item-sav item-sav--white">
+                        <img class="item-sav__image" src="img/content/saving-01.webp" alt="Product picture">
                         <!--                        <div class="item__overlay"></div>-->
-                        <div class="item__info info info--left">
-                            <h2 class="info__saving-title">
+                        <div class="item-sav__info info-sav info-sav--left">
+                            <a class="info-sav__title" href="#">
                                 Hawaiian
                                 Shirts
-                            </h2>
-                            <div class="info__text">
+                            </a>
+                            <div class="info-sav__text">
                                 Dress up in summer vibe
                             </div>
                             <span>
                                 UPTO 50% OFF
                             </span>
+                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                                SHOP NOW
+                            </a>
                         </div>
-
+                    </div>
+                    <div class="content__sav-item item-sav item-sav--white">
+                        <img class="item-sav__image" src="img/content/saving-02.webp" alt="Product picture">
+                        <!--                        <div class="item__overlay"></div>-->
+                        <div class="item-sav__info info-sav">
+                            <a class="info-sav__button" href="#">
+                                Limited Stock
+                            </a>
+                            <a class="info-sav__title" href="#">
+                                Printed
+                                T-Shirt
+                            </a>
+                            <div class="info-sav__text">
+                                New Designs Every Week
+                            </div>
+                            <span>
+                                UPTO 40% OFF
+                            </span>
+                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                                SHOP NOW
+                            </a>
+                        </div>
+                    </div>
+                    <div class="content__sav-item item-sav">
+                        <img class="item-sav__image" src="img/content/saving-03.webp" alt="Product picture">
+                        <!--                        <div class="item__overlay"></div>-->
+                        <div class="item-sav__info info-sav info-sav--right">
+                            <a class="info-sav__title" href="#">
+                                Cargo
+                                Joggers
+                            </a>
+                            <div class="info-sav__text">
+                                Move with style & comfort
+                            </div>
+                            <span>
+                                UPTO 50% OFF
+                            </span>
+                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                                SHOP NOW
+                            </a>
+                        </div>
+                    </div>
+                    <div class="content__sav-item item-sav">
+                        <img class="item-sav__image" src="img/content/saving-04.webp" alt="Product picture">
+                        <!--                        <div class="item__overlay"></div>-->
+                        <div class="item-sav__info info-sav">
+                            <a class="info-sav__title" href="#">
+                                Urban
+                                Shirts
+                            </a>
+                            <div class="info-sav__text">
+                                Live In Comfort
+                            </div>
+                            <span>
+                                UPTO 60% OFF
+                            </span>
+                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                                SHOP NOW
+                            </a>
+                        </div>
+                    </div>
+                    <div class="content__sav-item item-sav">
+                        <img class="item-sav__image" src="img/content/saving-05.webp" alt="Product picture">
+                        <!--                        <div class="item__overlay"></div>-->
+                        <div class="item-sav__info info-sav">
+                            <a class="info-sav__title" href="#">
+                                Oversized
+                                T-Shirts
+                            </a>
+                            <div class="info-sav__text">
+                                Street Style Icon
+                            </div>
+                            <span>
+                                UPTO 60% OFF
+                            </span>
+                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                                SHOP NOW
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -151,7 +232,7 @@
             Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.
         </h6>
     </footer>
-<!--    <script src="js/script.js"></script>-->
+    <!--    <script src="js/script.js"></script>-->
 </div>
 </body>
 </html>
