--- a/lesson-19/index.html
+++ b/lesson-19/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.2">
+    <link rel="stylesheet" href="css/style.css?v=1.0.3">
     <title>Lesson 19</title>
 </head>
 <body>
@@ -124,10 +124,10 @@
                     </h2>
                 </div>
                 <div class="saving__content content">
-                    <div class="content__sav-item item-sav item-sav--white">
+                    <div class="content__sav-item content__sav-item--left item-sav item-sav--white">
                         <img class="item-sav__image" src="img/content/saving-01.webp" alt="Product picture">
-                        <!--                        <div class="item__overlay"></div>-->
-                        <div class="item-sav__info info-sav info-sav--left">
+                        <div class="item-sav__overlay"></div>
+                        <div class="item-sav__info info-sav">
                             <a class="info-sav__title" href="#">
                                 Hawaiian
                                 Shirts
@@ -135,40 +135,40 @@
                             <div class="info-sav__text">
                                 Dress up in summer vibe
                             </div>
-                            <span>
+                            <div class="info-sav__sale">
                                 UPTO 50% OFF
-                            </span>
-                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                            </div>
+                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg info-sav__link--arrow-white" href="#">
                                 SHOP NOW
                             </a>
                         </div>
                     </div>
                     <div class="content__sav-item item-sav item-sav--white">
                         <img class="item-sav__image" src="img/content/saving-02.webp" alt="Product picture">
-                        <!--                        <div class="item__overlay"></div>-->
-                        <div class="item-sav__info info-sav">
+                        <div class="item-sav__overlay"></div>
+                        <div class="item-sav__info item-sav__info--end info-sav">
                             <a class="info-sav__button" href="#">
                                 Limited Stock
                             </a>
-                            <a class="info-sav__title" href="#">
+                            <a class="info-sav__title info-sav__title--width" href="#">
                                 Printed
                                 T-Shirt
                             </a>
                             <div class="info-sav__text">
                                 New Designs Every Week
                             </div>
-                            <span>
+                            <div class="info-sav__sale">
                                 UPTO 40% OFF
-                            </span>
-                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                            </div>
+                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg info-sav__link--arrow-white" href="#">
                                 SHOP NOW
                             </a>
                         </div>
                     </div>
-                    <div class="content__sav-item item-sav">
+                    <div class="content__sav-item item-sav item-sav--padding">
                         <img class="item-sav__image" src="img/content/saving-03.webp" alt="Product picture">
                         <!--                        <div class="item__overlay"></div>-->
-                        <div class="item-sav__info info-sav info-sav--right">
+                        <div class="item-sav__info info-sav">
                             <a class="info-sav__title" href="#">
                                 Cargo
                                 Joggers
@@ -176,48 +176,48 @@
                             <div class="info-sav__text">
                                 Move with style & comfort
                             </div>
-                            <span>
+                            <div class="info-sav__sale">
                                 UPTO 50% OFF
-                            </span>
+                            </div>
                             <a class="info-sav__link info-sav__link--arrow" href="#">
                                 SHOP NOW
                             </a>
                         </div>
                     </div>
-                    <div class="content__sav-item item-sav">
-                        <img class="item-sav__image" src="img/content/saving-04.webp" alt="Product picture">
+                    <div class="content__sav-item item-sav content__sav-item--big">
+                        <img class="item-sav__image item-sav__image--size" src="img/content/saving-04.webp" alt="Product picture">
                         <!--                        <div class="item__overlay"></div>-->
-                        <div class="item-sav__info info-sav">
-                            <a class="info-sav__title" href="#">
+                        <div class="item-sav__info info-sav info-sav--big">
+                            <a class="info-sav__title info-sav__title--big" href="#">
                                 Urban
                                 Shirts
                             </a>
-                            <div class="info-sav__text">
+                            <div class="info-sav__text info-sav__text--big">
                                 Live In Comfort
                             </div>
-                            <span>
+                            <div class="info-sav__sale info-sav__sale--big">
                                 UPTO 60% OFF
-                            </span>
-                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                            </div>
+                            <a class="info-sav__link info-sav__link--arrow info-sav__link--border" href="#">
                                 SHOP NOW
                             </a>
                         </div>
                     </div>
-                    <div class="content__sav-item item-sav">
-                        <img class="item-sav__image" src="img/content/saving-05.webp" alt="Product picture">
+                    <div class="content__sav-item content__sav-item--big item-sav">
+                        <img class="item-sav__image item-sav__image--size" src="img/content/saving-05.webp" alt="Product picture">
                         <!--                        <div class="item__overlay"></div>-->
-                        <div class="item-sav__info info-sav">
-                            <a class="info-sav__title" href="#">
+                        <div class="item-sav__info info-sav info-sav--big">
+                            <a class="info-sav__title info-sav__title--big" href="#">
                                 Oversized
                                 T-Shirts
                             </a>
                             <div class="info-sav__text">
                                 Street Style Icon
                             </div>
-                            <span>
+                            <div class="info-sav__sale info-sav__sale--big">
                                 UPTO 60% OFF
-                            </span>
-                            <a class="info-sav__link info-sav__link--arrow" href="#">
+                            </div>
+                            <a class="info-sav__link info-sav__link--arrow info-sav__link--border" href="#">
                                 SHOP NOW
                             </a>
                         </div>
