--- a/lesson-19/index.html
+++ b/lesson-19/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.3">
+    <link rel="stylesheet" href="css/style.css?v=1.0.4">
     <title>Lesson 19</title>
 </head>
 <body>
@@ -30,9 +30,9 @@
                             <h2 class="info__title">
                                 High Coziness
                             </h2>
-                            <span>
+                            <div class="info__sale">
                             UPTO 50% OFF
-                            </span>
+                            </div>
                             <a class="info__link info__link--yellow" href="#" target="_blank">
                                 Explore Items
                             </a>
@@ -50,9 +50,9 @@
                                 Breezy Summer
                                 Style
                             </h2>
-                            <span>
+                            <div class="info__sale">
                             UPTO 50% OFF
-                            </span>
+                            </div>
                             <a class="info__link info__link--purple" href="#" target="_blank">
                                 Explore Items
                             </a>
@@ -138,7 +138,8 @@
                             <div class="info-sav__sale">
                                 UPTO 50% OFF
                             </div>
-                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg info-sav__link--arrow-white" href="#">
+                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg info-sav__link--arrow-white"
+                               href="#">
                                 SHOP NOW
                             </a>
                         </div>
@@ -160,14 +161,15 @@
                             <div class="info-sav__sale">
                                 UPTO 40% OFF
                             </div>
-                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg info-sav__link--arrow-white" href="#">
+                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg info-sav__link--arrow-white"
+                               href="#">
                                 SHOP NOW
                             </a>
                         </div>
                     </div>
                     <div class="content__sav-item item-sav item-sav--padding">
                         <img class="item-sav__image" src="img/content/saving-03.webp" alt="Product picture">
-                        <!--                        <div class="item__overlay"></div>-->
+                        <div class="item-sav__overlay"></div>
                         <div class="item-sav__info info-sav">
                             <a class="info-sav__title" href="#">
                                 Cargo
@@ -185,8 +187,9 @@
                         </div>
                     </div>
                     <div class="content__sav-item item-sav content__sav-item--big">
-                        <img class="item-sav__image item-sav__image--size" src="img/content/saving-04.webp" alt="Product picture">
-                        <!--                        <div class="item__overlay"></div>-->
+                        <img class="item-sav__image item-sav__image--size" src="img/content/saving-04.webp"
+                             alt="Product picture">
+                        <div class="item-sav__overlay"></div>
                         <div class="item-sav__info info-sav info-sav--big">
                             <a class="info-sav__title info-sav__title--big" href="#">
                                 Urban
@@ -203,9 +206,10 @@
                             </a>
                         </div>
                     </div>
-                    <div class="content__sav-item content__sav-item--big item-sav">
-                        <img class="item-sav__image item-sav__image--size" src="img/content/saving-05.webp" alt="Product picture">
-                        <!--                        <div class="item__overlay"></div>-->
+                    <div class="content__sav-item content__sav-item--big item-sav item-sav--last">
+                        <img class="item-sav__image item-sav__image--size item-sav__image--last" src="img/content/saving-05.webp"
+                             alt="Product picture">
+                        <div class="item-sav__overlay"></div>
                         <div class="item-sav__info info-sav info-sav--big">
                             <a class="info-sav__title info-sav__title--big" href="#">
                                 Oversized
