--- a/lesson-19/index.html
+++ b/lesson-19/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.4">
+    <link rel="stylesheet" href="css/style.css?v=1.0.5">
     <title>Lesson 19</title>
 </head>
 <body>
 <div class="wrapper">
     <!--    Header-->
     <header class="header">
-        <h1>
-            GRID
+        <h1 class="header__title">
+            Grid Layout Module
         </h1>
     </header>
     <!--    Main. Page-->
@@ -31,7 +31,7 @@
                                 High Coziness
                             </h2>
                             <div class="info__sale">
-                            UPTO 50% OFF
+                                UPTO 50% OFF
                             </div>
                             <a class="info__link info__link--yellow" href="#" target="_blank">
                                 Explore Items
@@ -51,29 +51,9 @@
                                 Style
                             </h2>
                             <div class="info__sale">
-                            UPTO 50% OFF
+                                UPTO 50% OFF
                             </div>
                             <a class="info__link info__link--purple" href="#" target="_blank">
-                                Explore Items
-                            </a>
-                        </div>
-                    </div>
-                    <div class="content__item item">
-                        <img class="item__image item__image--right" src="img/example-2.jpg"
-                             alt="Breezy summer style picture">
-                        <div class="item__overlay"></div>
-                        <div class="item__info info info--right">
-                            <h3 class="info__subtitle info__subtitle--right">
-                                Be young Presents
-                            </h3>
-                            <h2 class="info__title">
-                                Breezy Summer
-                                Style
-                            </h2>
-                            <span>
-                                                UPTO 50% OFF
-                                                </span>
-                            <a class="info__link" href="#" target="_blank">
                                 Explore Items
                             </a>
                         </div>
@@ -138,7 +118,7 @@
                             <div class="info-sav__sale">
                                 UPTO 50% OFF
                             </div>
-                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg info-sav__link--arrow-white"
+                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg"
                                href="#">
                                 SHOP NOW
                             </a>
@@ -146,12 +126,11 @@
                     </div>
                     <div class="content__sav-item item-sav item-sav--white">
                         <img class="item-sav__image" src="img/content/saving-02.webp" alt="Product picture">
-                        <div class="item-sav__overlay"></div>
                         <div class="item-sav__info item-sav__info--end info-sav">
                             <a class="info-sav__button" href="#">
                                 Limited Stock
                             </a>
-                            <a class="info-sav__title info-sav__title--width" href="#">
+                            <a class="info-sav__title" href="#">
                                 Printed
                                 T-Shirt
                             </a>
@@ -161,15 +140,14 @@
                             <div class="info-sav__sale">
                                 UPTO 40% OFF
                             </div>
-                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg info-sav__link--arrow-white"
+                            <a class="info-sav__link info-sav__link--arrow info-sav__link--bg"
                                href="#">
                                 SHOP NOW
                             </a>
                         </div>
                     </div>
-                    <div class="content__sav-item item-sav item-sav--padding">
+                    <div class="content__sav-item item-sav item-sav--align">
                         <img class="item-sav__image" src="img/content/saving-03.webp" alt="Product picture">
-                        <div class="item-sav__overlay"></div>
                         <div class="item-sav__info info-sav">
                             <a class="info-sav__title" href="#">
                                 Cargo
@@ -186,42 +164,41 @@
                             </a>
                         </div>
                     </div>
-                    <div class="content__sav-item item-sav content__sav-item--big">
+                    <div class="content__sav-item content__sav-item--big item-sav">
                         <img class="item-sav__image item-sav__image--size" src="img/content/saving-04.webp"
                              alt="Product picture">
-                        <div class="item-sav__overlay"></div>
                         <div class="item-sav__info info-sav info-sav--big">
-                            <a class="info-sav__title info-sav__title--big" href="#">
+                            <a class="info-sav__title" href="#">
                                 Urban
                                 Shirts
                             </a>
-                            <div class="info-sav__text info-sav__text--big">
+                            <div class="info-sav__text">
                                 Live In Comfort
                             </div>
-                            <div class="info-sav__sale info-sav__sale--big">
+                            <div class="info-sav__sale">
                                 UPTO 60% OFF
                             </div>
-                            <a class="info-sav__link info-sav__link--arrow info-sav__link--border" href="#">
+                            <a class="info-sav__link info-sav__link--arrow" href="#">
                                 SHOP NOW
                             </a>
                         </div>
                     </div>
-                    <div class="content__sav-item content__sav-item--big item-sav item-sav--last">
-                        <img class="item-sav__image item-sav__image--size item-sav__image--last" src="img/content/saving-05.webp"
+                    <div class="content__sav-item content__sav-item--big item-sav">
+                        <img class="item-sav__image item-sav__image--size"
+                             src="img/content/saving-05.webp"
                              alt="Product picture">
-                        <div class="item-sav__overlay"></div>
                         <div class="item-sav__info info-sav info-sav--big">
-                            <a class="info-sav__title info-sav__title--big" href="#">
+                            <a class="info-sav__title" href="#">
                                 Oversized
                                 T-Shirts
                             </a>
                             <div class="info-sav__text">
                                 Street Style Icon
                             </div>
-                            <div class="info-sav__sale info-sav__sale--big">
+                            <div class="info-sav__sale">
                                 UPTO 60% OFF
                             </div>
-                            <a class="info-sav__link info-sav__link--arrow info-sav__link--border" href="#">
+                            <a class="info-sav__link info-sav__link--arrow" href="#">
                                 SHOP NOW
                             </a>
                         </div>
@@ -229,14 +206,12 @@
                 </div>
             </div>
         </div>
-
     </main>
     <footer class="footer">
         <h6 class="footer__title">
             Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.
         </h6>
     </footer>
-    <!--    <script src="js/script.js"></script>-->
 </div>
 </body>
 </html>
