--- a/lesson-19/index.html
+++ b/lesson-19/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.5">
+    <link rel="stylesheet" href="css/style.css?v=1.0.6">
     <title>Lesson 19</title>
 </head>
 <body>
@@ -70,25 +70,33 @@
                 </div>
                 <div class="new-arrival__content content">
                     <a class="content__item-new" href="#">
-                        <img class="content__image" src="img/content/new-arrival-01.png" alt="New arrival product">
+                        <div class="content__wrapper">
+                            <img class="content__image" src="img/content/new-arrival-01.webp" alt="New arrival product">
+                        </div>
                         <h4 class="content__title">
                             Knitted Joggers
                         </h4>
                     </a>
                     <a class="content__item-new" href="#">
-                        <img class="content__image" src="img/content/new-arrival-02.png" alt="New arrival product">
+                        <div class="content__wrapper">
+                            <img class="content__image" src="img/content/new-arrival-02.webp" alt="New arrival product">
+                        </div>
                         <h4 class="content__title">
                             Full Sleeve
                         </h4>
                     </a>
                     <a class="content__item-new" href="#">
-                        <img class="content__image" src="img/content/new-arrival-03.png" alt="New arrival product">
+                        <div class="content__wrapper">
+                            <img class="content__image" src="img/content/new-arrival-03.webp" alt="New arrival product">
+                        </div>
                         <h4 class="content__title">
                             Active T-Shirts
                         </h4>
                     </a>
                     <a class="content__item-new" href="#">
-                        <img class="content__image" src="img/content/new-arrival-04.png" alt="New arrival product">
+                        <div class="content__wrapper">
+                            <img class="content__image" src="img/content/new-arrival-04.webp" alt="New arrival product">
+                        </div>
                         <h4 class="content__title">
                             Urban Shirts
                         </h4>
