--- a/lesson-20/index.html
+++ b/lesson-20/index.html
@@ -21,7 +21,7 @@
                 <div class="menu__body">
                     <ul class="menu__list list">
                         <li class="list__item list__item--active">
-                            <a class="list__link" href="index.html" target="_blank">
+                            <a class="list__link" href="individ.html" target="_blank">
                                 Home
                             </a>
                         </li>
@@ -78,18 +78,25 @@
                 </div>
             </div>
             <div class="header__action action">
-                <a class="action__link action__link--display" href="#">
-                    Log In
+                <a class="action__item" href="#">
+                    <img src="img/icons/header-favorite.png" alt="To favorite">
+                    <span id="quantity-fav">
+                        1
+                    </span>
                 </a>
-                <img class="action__image" src="img/icons/log-in.svg" alt="Log In">
-
-                <button class="action__icon-menu icon-menu" type="button">
-                    <span></span>
-                </button>
+                <a class="action__item" href="#">
+                    <img src="img/icons/header-cart.svg" alt="To cart">
+                    <span id="quantity-cart">
+                        1
+                    </span>
+                </a>
             </div>
+            <button class="header__icon-menu icon-menu" type="button">
+                <span></span>
+            </button>
         </div>
     </header>
-    <!--    Main. Page-->
+
     <!--    Main. Page-->
     <main class="page">
     </main>
